...
        case .segaCD: return "Sega CD"
        case .sega32x: return "Sega 32x"
        case .segaSaturn: return "Saturn"
        case .dc: return "Dreamcast"
        case .nes: return "NES"
        case .snes: return "SNES"
        case .n64: return "N64"
        case .gc: return "Gamecube"
        case .wii: return "Wii"
        case .wiiU: return "Wii U"
        case .nintendoSwitch: return "Switch"
        default: return "[platform name not implemented]"
        }
...
