...
        gamesTableView.registerCellWithNib(GameCell.self, bundle: Bundle.main)
        gamesTableView.registerCellWithNib(EmptyCell.self, bundle: Bundle.main)
        dataSource.delegate = self
        dataSource.state = .empty
        gamesSearchBar.delegate = self
        gamesSearchBar.autocapitalizationType = .none
        gamesSearchBar.placeholder = "Search query..."
        gamesSearchBar.accessibilityIdentifier = "searchBar"        
    }
    
    // MARK: Actions
    
    @objc func back() {
...
